# knok

./: .gitignore  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPERS.md  README.md  coverage.json  flake.nix
.github/workflows/: coverage.yml  release.yml  rust.yml
benchmarks/runtime/: Cargo.toml  build.rs
benchmarks/runtime/benches/: runtime.rs
benchmarks/runtime/src/: main.rs
crates/knok/: Cargo.toml  README.md
crates/knok-build/: Cargo.toml  README.md
crates/knok-build-macros/: Cargo.toml  README.md
crates/knok-build-macros/src/: lib.rs
crates/knok-build/src/: codegen.rs  lib.rs  trace.rs
crates/knok-build/src/trace/: context.rs  conv.rs  creation.rs  elementwise.rs  expr.rs  linalg.rs  mod.rs  normalize.rs  pool.rs  reductions.rs  shape.rs  tensor.rs
crates/knok-build/tests/: build_script_fail.rs  ui.rs
crates/knok-build/tests/ui/: missing_backend.rs  missing_backend.stderr  missing_cuda_feature.rs  missing_cuda_feature.stderr  missing_metal_platform.rs  missing_metal_platform.stderr  missing_return_type.rs  missing_return_type.stderr  missing_vulkan_feature.rs  missing_vulkan_feature.stderr  old_axis_syntax.rs  old_axis_syntax.stderr  pattern_argument.rs  pattern_argument.stderr
crates/knok-compile/: Cargo.toml  README.md
crates/knok-compile/src/: backend.rs  common.rs  compile.rs  graph_macro.rs  lib.rs  lowering.rs  mlir.rs  mlir_model.rs  mlir_signature.rs  registry.rs
crates/knok-compile/src/lowering/: conv.rs  emit.rs  linalg.rs  lowerer.rs  matmul.rs  mod.rs  pool.rs  reductions.rs  shape.rs  tensor_ops.rs  value.rs
crates/knok-core/: Cargo.toml  README.md
crates/knok-core/src/: ast.rs  lib.rs  parse.rs  tests.rs  type_parse.rs  typecheck.rs
crates/knok-core/src/ops/: common.rs  conv.rs  linalg.rs  matmul.rs  mod.rs  permute.rs  pool.rs  rules.rs  static_creation.rs
crates/knok-macros/: Cargo.toml
crates/knok-macros/src/: lib.rs
crates/knok/benches/: runtime.rs
crates/knok/examples/: basic.rs  classifier.rs  dtypes.rs  imported_mlir.rs  mlp.rs  multi_backend.rs
crates/knok/src/: artifact.rs  backend.rs  graph.rs  lib.rs  ops.rs  private.rs  runtime.rs  tensor.rs
crates/knok/tests/: backend.rs  basic.rs  metal.rs  mlir_model.rs  tensor.rs
crates/knok/tests/build-tracing-runtime/: Cargo.toml  build.rs
crates/knok/tests/build-tracing-runtime/src/: lib.rs
crates/knok/tests/build-tracing-smoke/: Cargo.toml  build.rs
crates/knok/tests/build-tracing-smoke/src/: lib.rs
crates/knok/tests/fixtures/: add4.mlir  add4_i32.mlir  add_sub4.mlir
crates/knok/tests/no-std-smoke/: Cargo.toml  build.rs
crates/knok/tests/no-std-smoke/src/: lib.rs
crates/knok/tests/runtime-e2e/: Cargo.toml  build.rs
crates/knok/tests/runtime-e2e/src/: common.rs  lib.rs
crates/knok/tests/runtime-e2e/src/tests/: creation.rs  elementwise.rs  layout.rs  linalg_conv.rs  mod.rs  reductions.rs  runtime_api.rs  shape_indexing.rs
crates/knok/tests/ui/: arange_bool.rs  arange_bool.stderr  arange_dynamic_parameter.rs  arange_dynamic_parameter.stderr  arange_shape.rs  arange_shape.stderr  backend_driver_mismatch.rs  backend_driver_mismatch.stderr  batched_matmul_shape.rs  batched_matmul_shape.stderr  bool_arithmetic.rs  bool_arithmetic.stderr  bool_ordering.rs  bool_ordering.stderr  duplicate_backend_driver.rs  duplicate_backend_driver.stderr  elementwise_math_arity.rs  elementwise_math_arity.stderr  elementwise_math_dtype.rs  elementwise_math_dtype.stderr  eye_non_square.rs  eye_non_square.stderr  full_like_dtype.rs  full_like_dtype.stderr  full_like_shape.rs  full_like_shape.stderr  gather_index_dtype.rs  gather_index_dtype.stderr  gather_shape.rs  gather_shape.stderr  graph_call_arity.rs  graph_call_arity.stderr  graph_call_type.rs  graph_call_type.stderr  integer_relu.rs  integer_relu.stderr  invalid_backend_path.rs  invalid_backend_path.stderr  invalid_driver_path.rs  invalid_driver_path.stderr  (+68 more)
docs/: backends.md  benchmarks.md  compiler.md  dtypes.md  lowering.md  release-readiness.md  runtime.md  semantics.md  static-graph-syntax.md  testing.md
scripts/: benchmark.sh  coverage.sh  publish.sh  release-check.sh  verify-release.sh
