[package]
name = "knok-runtime-bench"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
knok = { path = "../../crates/knok" }
ndarray = "0.16.1"

[build-dependencies]
knok-build = { path = "../../crates/knok-build" }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "runtime"
harness = false

[workspace]
