[package]
name = "knok-build-macros"
version = "0.3.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
knok-core = { workspace = true, features = ["half"] }
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
