[package]
name = "knok-build-macros"
version = "0.3.3"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Build-time graph registration macros for knok"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
knok-core = { workspace = true, features = ["half"] }
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
