[package]
name = "knok-build"
version = "0.3.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Build-script graph tracing and code generation for knok"
readme = "README.md"

[dependencies]
anyhow.workspace = true
half.workspace = true
knok-build-macros.workspace = true
knok-compile.workspace = true
knok-core.workspace = true

[dev-dependencies]
tempfile.workspace = true
trybuild.workspace = true

[features]
cuda = ["knok-compile/cuda"]
vulkan = ["knok-compile/vulkan"]
