[package]
name = "knok-compile"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "MLIR lowering and IREE compilation for knok"

[dependencies]
anyhow.workspace = true
blake3.workspace = true
knok-core.workspace = true
melior.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
tempfile.workspace = true
thiserror.workspace = true
