[package]
name = "knok-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core graph IR and type checking for knok"

[dependencies]
proc-macro2.workspace = true
syn.workspace = true
thiserror.workspace = true

[dev-dependencies]
quote.workspace = true
