[package]
name = "knok-core"
version = "0.3.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core graph IR and type checking for knok"
readme = "README.md"

[dependencies]
proc-macro2.workspace = true
syn.workspace = true
thiserror.workspace = true

[features]
half = []

[dev-dependencies]
quote.workspace = true
