[package]
name = "knok-macros"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Procedural macros for knok"

[lib]
proc-macro = true

[dependencies]
knok-compile.workspace = true
knok-core.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[features]
half = ["knok-compile/half", "knok-core/half"]
