[package]
name = "knok"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Compile-time linalg graphs for Rust"

[dependencies]
eerie = { workspace = true, optional = true }
half = { workspace = true, optional = true }

[features]
default = ["std", "runtime"]
std = ["eerie?/std", "half?/std"]
half = ["dep:half", "eerie?/half"]
runtime = ["std", "dep:eerie", "eerie/runtime", "eerie/std"]
embedded-runtime = ["dep:eerie", "eerie/runtime"]
vulkan = ["eerie?/vulkan"]
cuda = ["eerie?/cuda"]
